--- a/RansomScare/SplashScreen.resx
+++ b/RansomScare/SplashScreen.resx
@@ -121,7 +121,7 @@
   <data name="logoPictureBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWgAAAFoCAYAAAB65WHVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAA/7JJREFUeF7snQdgFVXa/tPoCWn0qhRBSnpPSEJ6p3cEFRV7314su/vtt8Vdu0BI
+        vAAADrwBlbxySQAA/7JJREFUeF7snQdgFVXa/tPoCWn0qhRBSnpPSEJ6p3cEFRV7314su/vtt8Vdu0BI
         A7vSsVMDpIeOCNh1V3eVnn5v8vyf98xMcu/NBUHdXb/9z4uPZ2buvZOZM+f8znvOnOJimmmmmWaaaaaZ
         ZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZ
         ZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZZppppplmmmmmmWaaaaaZ
@@ -1710,6 +1710,9 @@
         M2fOnDlz5syZM2fOnDlz5syZM2fOnDlz5syZM2fOnDlz5syZM2fOnDlz5syZM2fOnDlz5syZM2fOnDlz
         5syZM2fOnDlz5syZM2fOnDlz9ldpaWn/C/P49/ZGYp+0AAAAAElFTkSuQmCC
 </value>
+  </data>
+  <data name="infoLabel1.Text" xml:space="preserve">
+    <value>RansomScare is an educational ransomware attack simulation. It will encrypt files in the current directory using a generated key. This key will be stored in the current directory and will be used for file decryption.</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
